--- a/interpreter.css
+++ b/interpreter.css
@@ -18,8 +18,15 @@
 	line-height: 1em;
 }
 
-.text-bold{
-	font-weight: bold;
+#loadingScreen {
+	position: absolute;
+	background-color: rgba(255,255,255,0.4);
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	text-align:center;
+	vertical-align:middle;
 }
 
 #cartesian_plane, #cartesian_plane svg{
@@ -30,7 +37,9 @@
 
 #cartesian_plane{
 	margin-top: 100px;
-	background-image: url('data/NancyComic_Rescaled_24Bit.bmp');
-	background-size: 1600px 676px;
 	background-repeat: no-repeat;
+}
+
+.text-bold{
+	font-weight: bold;
 }
