--- a/interpreter.css
+++ b/interpreter.css
@@ -1,6 +1,6 @@
 #infoPanel {
 	position: absolute;
-	background-color: white;
+	background-color: rgba(255,255,255,0.9);
 	border: 1px solid #CCC;
 	border-radius: 4px;
 	box-shadow: 0 0 5px #DDD;
@@ -18,15 +18,14 @@
 	line-height: 1em;
 }
 
-#loadingScreen {
-	position: absolute;
-	background-color: rgba(255,255,255,0.4);
-	left: 0;
-	top: 0;
+.loadingScreen {
 	width: 100%;
-	height: 100%;
 	text-align:center;
-	vertical-align:middle;
+	display: inline-block;
+	font-size: 2em;
+	font-weight: bold;
+	padding-top: 1em;
+	padding-bottom: 1em;
 }
 
 #cartesian_plane, #cartesian_plane svg{
@@ -36,10 +35,51 @@
 }
 
 #cartesian_plane{
-	margin-top: 100px;
 	background-repeat: no-repeat;
+	width: 100%;
+	height: 100%;
 }
 
 .text-bold{
 	font-weight: bold;
+}
+
+.panel{
+	position:absolute;
+	left: 0;
+	right: 0;
+	border-top: 1px solid rgba(0,0,0,0.2);
+	border-bottom: 1px solid rgba(0,0,0,0.2);
+	box-shadow: 0 0 2px #DDD;
+	background-color: rgba(255,255,255,0.6);
+}
+
+.vertical_layout{
+	padding-left: 1em;
+	padding-right: 1em;
+	padding-top: 1em;
+}
+
+#blocking{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+#slidebar{
+	height: 2.2em;
+	position: relative;
+	background-image: url(slidebar.svg);
+	background-size: 100% 2em;
+	background-repeat: no-repeat;
+	background-position: 0 0.2em;
+}
+
+.slidebar_key{
+	position: absolute;
+	background-color: rgba(0,0,0,1);
+	height: 2.2em;
+	opacity: 0.2;
 }
