--- a/interpreter.css
+++ b/interpreter.css
@@ -18,6 +18,35 @@
 	line-height: 1em;
 }
 
+#rolloverPanel {
+	position: absolute;
+	background-color: rgba(255,255,255,0.9);
+	border: 1px solid #CCC;
+	border-radius: 4px;
+	box-shadow: 0 0 5px #DDD;
+}
+
+#rolloverPanel div{
+	display: block;
+	font-family: arial;
+	font-size: 0.6em;
+	margin: 0.4em auto;
+	padding-left: 0.6em;
+	padding-right: 0.6em;
+	cursor: default;
+	transition: background-color 0.2s;
+	-webkit-transition: background-color 0.2s;
+}
+
+#rolloverPanel div:hover{
+	background-color: rgba(255,0,0,0.2);
+}
+
+
+#rolloverPanel div{
+	margin: 0.4em auto;
+}
+
 .loadingScreen {
 	width: 100%;
 	text-align:center;
@@ -67,6 +96,9 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
 }
 
 #slidebar{
@@ -91,7 +123,7 @@
 	height: 2.2em;
 	opacity: 0.2;
 	bottom: 0;
-	border-left: 1px solid #DDD;
+	border-left: 1px solid #FFF;
 	transition: height 0.2s, opacity 0.2s;
 	-webkit-transition: height 0.2s, opacity 0.2s;
 }
