Scan path plotting
Fix:
	Use default value when setting input is empty
	Use image as background when saving plot
	Correctly clear event receivers when stepping
	Partial plot correctly map to entire time bar
Add:
	Button to reset setting values

--- a/interpreter.css
+++ b/interpreter.css
@@ -207,6 +207,12 @@
 	background-repeat: no-repeat;
 }
 
+#resetButton{
+	background-image: url(images/reset.svg);
+	background-position: center center;
+	background-repeat: no-repeat;
+}
+
 #exportResultOk{
 	background-image: url(images/x-mark.svg);
 	background-position: center center;
