--- a/styles/interpreter.css
+++ b/styles/interpreter.css
@@ -301,7 +301,7 @@
 }
 
 #exportResultOk{
-	background-image: url(images/x-mark.svg);
+	background-image: url(images/check.svg);
 	background-position: center center;
 	background-repeat: no-repeat;
 }
